# Legal-Ai-Assistant

./: .env.example  .gitignore  .vercelignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
api/: app.py  index.py  middleware.py
api/routes/: analyze.py  compare.py
api/static/: app.js  index.html  styles.css
cli/: __init__.py  main.py
config/: logging.yaml  settings.py
core/: __init__.py  comparator.py  extractor.py  llm.py  obligation_tracker.py  risk_analyzer.py  summarizer.py
models/: __init__.py  clause.py  contract.py  report.py
parsers/: __init__.py  clause_detector.py  docx_parser.py  html_parser.py  pdf_parser.py  text_chunker.py
pipeline/: __init__.py  cache.py  pipeline.py  stages.py
prompts/: __init__.py  base.py  extraction.py  risk.py  summary.py
prompts/templates/: __init__.py  employment.py  nda.py  saas.py  sow.py
schemas/: __init__.py  clause_schema.json  contract_schema.json  risk_schema.json  validator.py
tests/fixtures/sample_contracts/: sample_nda.txt
tests/integration/: test_api.py  test_pipeline.py
tests/unit/: test_extractor.py  test_risk_analyzer.py  test_schema_validator.py
utils/: logger.py  output_formatter.py  retry.py  token_counter.py
